--- a/contact.html
+++ b/contact.html
@@ -50,12 +50,12 @@
 
             <div class="col-md-6">
               <label for="fName" class="form-label">First Name</label>
-              <input type="type" class="form-control" id="fName" placeholder="John">
+              <input type="text" class="form-control" id="fName" placeholder="John">
             </div>
 
             <div class="col-md-6">
               <label for="lName" class="form-label">Last Name</label>
-              <input type="type" class="form-control" id="lName" placeholder="Doe">
+              <input type="text" class="form-control" id="lName" placeholder="Doe">
             </div>
 
             <div class="col-12">
