Hopefully Final Commit

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Name:Reese Cox -->
+    <!-- Date: 7/27/22 -->
+    <!-- Project: Bootsrtap B&B -->
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
