--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
+    <!-- Name:Reese Cox -->
+    <!-- Date: 7/27/22 -->
+    <!-- Project: Bootsrtap B&B -->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
